# ComfyUI-BrushNet-Wrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
brushnet/: brushnet.py  pipeline_brushnet.py  unet_2d_blocks.py  unet_2d_condition.py
configs/: brushnet_config.json  clip_vision.json
ella/: ella_unet.py  model.py
examples/: brushnet_example_incremental_outpainting.json  brushnet_example_inpaint_ella.json  brushnet_example_outpaint.json  brushnet_example_outpaint_rembg.json  brushnet_example_workflow_blend.json
ip_adapter/: ip_adapter.py
powerpaint/: BrushNet_CA.py  pipeline_PowerPaint_Brushnet_CA.py  utils.py
